# Plasma-Fractal-Visualizer

./: CMakeLists.txt  FractalGenerator.cpp  FractalGenerator.h  Globals.cpp  Globals.h  main.cpp  old.txt
